Name:                p423-compiler
Version:             0.0.1
Synopsis:            P423 class compiler framework.

Author:              Ryan R. Newton
Maintainer:          rrnewton@gmail.com
Category:            Language
Build-type:          Simple

-- Constraint on the version of Cabal needed to build this package:
Cabal-version:       >=1.10

Library
  Exposed-modules:
      CompilerHs.Compile
      FrameworkHs.Helpers
      FrameworkHs.Driver
      FrameworkHs.Prims
      FrameworkHs.Testing
      FrameworkHs.SExpReader.LispData
      FrameworkHs.SExpReader.Parser
      FrameworkHs.ParseL01
      
      FrameworkHs.GenGrammars.L01VerifyScheme

      CompilerHs.VerifyScheme
      CompilerHs.GenerateX86_64

  default-language:    Haskell2010
  build-depends:
      base == 4.*, deepseq == 1.3.*, vector >= 0.10,  containers, process, pretty,
      symbol, mtl >= 2, parsec >=3, bytestring >= 0.10, blaze-builder

Executable test-p423-compiler
-- Replace the previous line with these two if you like:
  -- Test-Suite test-p423-compiler
  --   type:       exitcode-stdio-1.0
  main-is:    scripts/LoadAndTest.hs
  default-language:    Haskell2010
  build-depends:
      base == 4.*, deepseq == 1.3.*, vector >= 0.10,  containers, process, pretty,
      symbol, mtl >= 2, parsec >=3, bytestring >= 0.10, blaze-builder
